--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </a>
             </div>
         </div>
-        <main class="col-11">
+        <main class="col-11 overflow-auto">
             <!-- parte blu -->
             <section id="boolean-pills" class="text-white d-flex flex-sm-column flex-lg-row  p-1">
                 <div class="col-lg-6 order-sm-2 order-lg-1">
@@ -77,9 +77,221 @@
                     <button class="btn btn-outline-light" type="submit">+</button>
                 </div>
             </section>
-            
-            <section id="cards" class="">
+            <!-- parte con cards -->
+            <section id="cards" class="d-flex flex-sm-column flex-lg-row">
+                <!-- prime due cards -->
+                <div class="col-sm-12 col-lg-8">
+                    <div class="card m-2">
+                        <div class="card-header"><h2>Prossime classi</h2></div>
+                        <table class="table">
+                            <thead>
+                              <tr>
+                                <th class="th-first" scope="col">Nome</th>
+                                <th class="d-sm-none d-md-table-cell" scope="col">Data inizio</th>
+                                <th class="d-sm-none d-md-table-cell" scope="col">ROI</th>
+                                <th scope="col">Stato</th>
+                                <th scope="col">Azioni</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <th scope="row">
+                                    <img src="./assets/img/class-avatar.jpg" alt="">
+                                    <span>classe 75</span>
+                                </th>
+                                <td class="d-sm-none d-md-table-cell">15 Feb 2021</td>
+                                <td class="d-sm-none d-md-table-cell">20%</td>
+                                <td><span class="badge rounded-pill text-bg-success">Done</span></td>
+                                <td>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-pen"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                </td>
+                              </tr>
+                              <tr>
+                                <th scope="row">
+                                    <img src="./assets/img/class-avatar.jpg" alt="">
+                                    <span>classe 76</span>
+                                </th>
+                                <td class="d-sm-none d-md-table-cell">16 Feb 2021</td>
+                                <td class="d-sm-none d-md-table-cell">20%</td>
+                                <td><span class="badge rounded-pill text-bg-success">Done</span></td>
+                                <td>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-pen"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                </td>
+                              </tr>
+                              <tr>
+                                <th scope="row">
+                                    <img src="./assets/img/class-avatar.jpg" alt="">
+                                    <span>classe 77</span>
+                                </th>
+                                <td class="d-sm-none d-md-table-cell">17 Feb 2021</td>
+                                <td class="d-sm-none d-md-table-cell">20%</td>
+                                <td><span class="badge rounded-pill text-bg-warning">Process</span></td>
+                                <td>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-pen"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                </td>
+                              </tr>
+                              <tr>
+                                <th scope="row">
+                                    <img src="./assets/img/class-avatar.jpg" alt="">
+                                    <span>classe 78</span>
+                                </th>
+                                <td class="d-sm-none d-md-table-cell">18 Feb 2021</td>
+                                <td class="d-sm-none d-md-table-cell">20%</td>
+                                <td><span class="badge rounded-pill text-bg-success">Done</span></td>
+                                <td>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-pen"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                </td>
+                              </tr>
+                              <tr>
+                                <th scope="row">
+                                    <img src="./assets/img/class-avatar.jpg" alt="">
+                                    <span>classe 79</span>
+                                </th>
+                                <td class="d-sm-none d-md-table-cell">19 Feb 2021</td>
+                                <td class="d-sm-none d-md-table-cell">20%</td>
+                                <td><span class="badge rounded-pill text-bg-danger">Failed</span></td>
+                                <td>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-pen"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                </td>
+                              </tr>
+                              <tr>
+                                <th scope="row">
+                                    <img src="./assets/img/class-avatar.jpg" alt="">
+                                    <span>classe 80</span>
+                                </th>
+                                <td class="d-sm-none d-md-table-cell">20 Feb 2021</td>
+                                <td class="d-sm-none d-md-table-cell">20%</td>
+                                <td><span class="badge rounded-pill text-bg-success">Done</span></td>
+                                <td>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-pen"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                </td>
+                              </tr>
+                              <tr>
+                                <th scope="row">
+                                    <img src="./assets/img/class-avatar.jpg" alt="">
+                                    <span>classe 81</span>
+                                </th>
+                                <td class="d-sm-none d-md-table-cell">21 Feb 2021</td>
+                                <td class="d-sm-none d-md-table-cell">20%</td>
+                                <td><span class="badge rounded-pill text-bg-danger">Failed</span></td>
+                                <td>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-pen"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                </td>
+                              </tr>
+                              <tr>
+                                <th scope="row">
+                                    <img src="./assets/img/class-avatar.jpg" alt="">
+                                    <span>classe 82</span>
+                                </th>
+                                <td class="d-sm-none d-md-table-cell">22 Feb 2021</td>
+                                <td class="d-sm-none d-md-table-cell">20%</td>
+                                <td><span class="badge rounded-pill text-bg-success">Done</span></td>
+                                <td>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-pen"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-outline-secondary">
+                                        <i class="fa-solid fa-trash"></i>
+                                    </button>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                    </div>
 
+                    <div class="card m-2">
+                        <div class="card-header"><h2>F.A.Q.</h2></div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item d-flex justify-content-between">
+                                Come aggiungere un nuovo studente?
+                                <i class="fa-solid fa-angle-down"></i>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between">
+                                Come posso accedere alle informaziopne alle informazione del mio account?
+                                <i class="fa-solid fa-angle-down"></i>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between">
+                                Posso usare questa dashboard da mobile?
+                                <i class="fa-solid fa-angle-down"></i>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- ultime due cards -->
+                <div class="col-sm-12 col-lg-4">
+                    <div id="todo" class="card m-2">
+                        <div class="card-header"><h2>Todo</h2></div>
+                        <ul class="list-group list-group-flush">
+                            <form action="">
+                                <li class="list-group-item">
+                                    <input type="checkbox">
+                                    Kickoff nuove classi
+                                </li>
+                                <li class="list-group-item">
+                                    <input type="checkbox">
+                                    Lezione su Bootstrap 5 in classe #75
+                                </li>
+                                <li class="list-group-item">
+                                    <input type="checkbox">
+                                    Controllare username github studenti
+                                </li>
+                            </form>
+                            
+                        </ul>
+                    </div>
+
+                    <div id="graph" class="card m-2">
+                        <img src="./assets/img/stats.jpeg" class="card-img-top" alt="">
+                        <div class="card-body">
+                          <h5 class="card-title">Utenti attivi</h5>
+                          <p class="card-text">Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item">Gennaio: 1200</li>
+                          <li class="list-group-item">Febbraio: 800</li>
+                          <li class="list-group-item">Marzo: 1500</li>
+                        </ul>
+                        <div class="card-body">
+                          <a href="#" class="card-link">Visualizza report approfondito</a>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
     </div>
